# TermDock

./: .gitignore  Overview.md  Plan.md  README.md  m2-smoke.ps1  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: artifacts.yml  ci.yml
client/: README.md  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
daemon/: Cargo.toml
daemon/migrations/: 0001_init.sql  0002_auth_pairing.sql
daemon/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs
daemon/src/process/: mod.rs
daemon/src/routes/: config.rs  health.rs  instances.rs  mod.rs  output.rs  pairing.rs  settings.rs  system.rs
daemon/src/ws/: events.rs  mod.rs  term.rs
design/ai_cli_manager_dashboard_refined_unified/: code.html
design/create_instance_dark_theme/: code.html
design/settings_dark_theme/: code.html
docs/: API.md  ARCHITECTURE.md  DEPLOY_WINDOWS.md  SECURITY.md
scripts/release/: build-portable.ps1
scripts/windows/: install-autostart.ps1  remove-autostart.ps1  show-token.ps1  start-daemon.ps1
web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/lib/: api.test.ts  api.ts  types.ts
web/src/pages/: Dashboard.tsx  InstanceForm.tsx  Settings.tsx  Terminal.tsx  dashboard-utils.test.ts  dashboard-utils.ts  instance-form-utils.test.ts  instance-form-utils.ts  settings-utils.test.ts  settings-utils.ts
