[package]
name = "ai-cli-manager-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting"] }

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "macros"] }
directories = "5"
base64 = "0.22"
futures = "0.3"

# Process & PTY (stubs in skeleton; implement in milestones)
portable-pty = "0.8"
sysinfo = "0.30"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
