[package]
name = "ai-cli-manager-client"
version = "0.1.0"
description = "Desktop wrapper for AI CLI Manager"
authors = ["AI CLI Manager"]
edition = "2021"

[lib]
name = "ai_cli_manager_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
